# AGRIGUARD-AI-offline-

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  .semgrepignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL_AND_RUN.md  LICENSE  ML_PIPELINE_README.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  USER_MANUAL.md  _list.py  cliff.toml  pip-audit.toml  pyproject.toml  pyupgrade.toml  requirements-dev.txt  requirements.txt  test_model.py  vulture.toml
.specify/: constitution.md
.specify/memory/: constitution.md
.specify/specs/: 001-json-report-schema.md
.specify/specs/crop-disease-detection/: plan.md  spec.md  tasks.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
AgriGuard/: README.md  __init__.py
AgriGuard/backend/: __init__.py  app.py  crop_detector.py  database.py  detect.py  llm.py  preprocess.py  recommendation.py  requirements.txt  train_model.py
AgriGuard/backend/tests/: conftest.py  test_app.py  test_crop_detector.py  test_database.py  test_detect.py  test_llm.py  test_llm_generate.py  test_offline.py  test_preprocess.py  test_recommendation.py
AgriGuard/frontend/: index.html
docs/: ARCHITECTURE_DIAGRAM.md  FOLDER_STRUCTURE.md  PROJECT_SCOPE.md  README.md  SPECIFICATION_KIT.md  WORK_DIVISION_PLAN.md
ml_pipeline/: .gitignore  GETTING_STARTED.md  README.md  __init__.py  config.py  dataset_loader.py  model.py  predict.py  requirements.txt  setup.py  streamlit_app.py  test_pipeline.py  train.py  utils.py
ml_pipeline/examples/: __init__.py  basic_usage.py
models/: disease_model.tflite  labels.txt
specs/: 001-crop-disease-detection.md  002-offline-llm-recommendations.md
specs/crop-disease-detection/: plan.md  spec.md  tasks.md
specs/offline-llm-recommendations/: plan.md  spec.md  tasks.md
